--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -727,11 +727,13 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Filters" id="BrG-rM-e4y">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="pbN-EL-raQ">
+                            <color key="tintColor" red="0.0" green="0.71372549019607845" blue="0.92156862745098034" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="cancelButtonAction:" destination="9v5-O1-ii7" id="V34-Hd-ZSk"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Done" id="F2t-av-xKd">
+                            <color key="tintColor" red="0.0" green="0.71372549019999998" blue="0.92156862750000001" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="doneButtonAction:" destination="9v5-O1-ii7" id="x0J-SA-IaX"/>
                             </connections>
