--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <development version="5000" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <scenes>
         <!--Flux OpenGL View Controller - OpenGLView-->
@@ -256,12 +256,12 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eJn-Ah-RV1" customClass="FluxTimeFilterControl">
-                                        <rect key="frame" x="247" y="129" width="45" height="393"/>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sxZ-KT-aF5" customClass="FluxTimeFilterControl">
+                                        <rect key="frame" x="0.0" y="20" width="320" height="528"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QTA-2K-tgO" customClass="FluxCompassButton">
+                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QTA-2K-tgO" customClass="FluxCompassButton">
                                         <rect key="frame" x="20" y="32" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -285,7 +285,7 @@
                                             <action selector="showLeftDrawer:" destination="2" eventType="touchUpInside" id="fbq-GC-5zU"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bo9-BI-7cK">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bo9-BI-7cK">
                                         <rect key="frame" x="244" y="37" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
@@ -300,17 +300,7 @@
                                             <segue destination="pTJ-mb-BZI" kind="modal" identifier="pushFiltersView" modalTransitionStyle="coverVertical" id="UDo-bv-NqA"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New York" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="3GP-IY-jjF">
-                                        <rect key="frame" x="88" y="51" width="148" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="ZL7-Ll-gO7"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOx-wz-4Oh">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOx-wz-4Oh">
                                         <rect key="frame" x="116" y="48" width="92" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
@@ -325,7 +315,7 @@
                                             <action selector="annotationsButtonAction:" destination="2" eventType="touchUpInside" id="zVf-sz-AnE"/>
                                         </connections>
                                     </button>
-                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="RP7-i5-SqD">
+                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="RP7-i5-SqD">
                                         <rect key="frame" x="0.0" y="20" width="320" height="2"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
@@ -333,7 +323,7 @@
                                         </constraints>
                                         <color key="progressTintColor" red="0.0" green="0.70588235294117641" blue="0.92156862745098034" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
                                     </progressView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VeC-Hk-pfe" userLabel="StatusBarView">
+                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VeC-Hk-pfe" userLabel="StatusBarView">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.45000000000000001" colorSpace="calibratedRGB"/>
@@ -342,27 +332,17 @@
                                 <constraints>
                                     <constraint firstItem="RP7-i5-SqD" firstAttribute="trailing" secondItem="VeC-Hk-pfe" secondAttribute="trailing" id="0Pw-f8-U8a"/>
                                     <constraint firstItem="VeC-Hk-pfe" firstAttribute="top" secondItem="jDD-EI-IPQ" secondAttribute="top" id="3eF-9R-uhp"/>
-                                    <constraint firstItem="3GP-IY-jjF" firstAttribute="top" secondItem="RP7-i5-SqD" secondAttribute="bottom" constant="29" id="54U-8h-Vr0"/>
-                                    <constraint firstItem="eJn-Ah-RV1" firstAttribute="leading" secondItem="jDD-EI-IPQ" secondAttribute="leading" constant="247" id="6K6-Lf-rRW"/>
                                     <constraint firstItem="QTA-2K-tgO" firstAttribute="leading" secondItem="WoV-XC-xK1" secondAttribute="leading" id="B9N-0G-BXv"/>
-                                    <constraint firstAttribute="bottom" secondItem="eJn-Ah-RV1" secondAttribute="bottom" constant="26" id="CPt-RC-xQK"/>
-                                    <constraint firstItem="3GP-IY-jjF" firstAttribute="leading" secondItem="QTA-2K-tgO" secondAttribute="trailing" constant="8" symbolic="YES" id="FPg-vw-M6e"/>
                                     <constraint firstItem="DOx-wz-4Oh" firstAttribute="top" secondItem="RP7-i5-SqD" secondAttribute="bottom" constant="26" id="GSA-bW-s4F"/>
                                     <constraint firstItem="DOx-wz-4Oh" firstAttribute="leading" secondItem="QTA-2K-tgO" secondAttribute="trailing" constant="36" id="LdK-4A-34Y"/>
-                                    <constraint firstItem="eJn-Ah-RV1" firstAttribute="top" secondItem="jDD-EI-IPQ" secondAttribute="top" constant="129" id="Qk1-Pt-cuA"/>
                                     <constraint firstItem="bo9-BI-7cK" firstAttribute="centerY" secondItem="QTA-2K-tgO" secondAttribute="centerY" id="VyB-bK-vi0"/>
                                     <constraint firstItem="bo9-BI-7cK" firstAttribute="top" secondItem="RP7-i5-SqD" secondAttribute="bottom" constant="15" id="XdY-Ge-eYH"/>
-                                    <constraint firstItem="eJn-Ah-RV1" firstAttribute="trailing" secondItem="bo9-BI-7cK" secondAttribute="trailing" constant="-2" id="Xvm-RC-ore"/>
-                                    <constraint firstItem="bo9-BI-7cK" firstAttribute="leading" secondItem="3GP-IY-jjF" secondAttribute="trailing" constant="8" symbolic="YES" id="a5r-Bo-hPk"/>
                                     <constraint firstItem="RP7-i5-SqD" firstAttribute="leading" secondItem="VeC-Hk-pfe" secondAttribute="leading" id="d4I-F6-Xky"/>
-                                    <constraint firstAttribute="trailing" secondItem="eJn-Ah-RV1" secondAttribute="trailing" constant="28" id="dNv-wv-9ZG"/>
                                     <constraint firstAttribute="bottom" secondItem="WoV-XC-xK1" secondAttribute="bottom" id="dWh-hz-Nfh"/>
                                     <constraint firstAttribute="width" constant="320" id="fhw-AM-un3"/>
                                     <constraint firstItem="VeC-Hk-pfe" firstAttribute="leading" secondItem="jDD-EI-IPQ" secondAttribute="leading" id="luv-uV-e6x"/>
-                                    <constraint firstItem="DOx-wz-4Oh" firstAttribute="centerX" secondItem="3GP-IY-jjF" secondAttribute="centerX" id="nA7-1j-uGi"/>
                                     <constraint firstItem="RP7-i5-SqD" firstAttribute="top" secondItem="VeC-Hk-pfe" secondAttribute="bottom" id="scT-CP-18E"/>
                                     <constraint firstItem="WoV-XC-xK1" firstAttribute="leading" secondItem="jDD-EI-IPQ" secondAttribute="leading" constant="20" id="uBr-ww-aL1"/>
-                                    <constraint firstItem="eJn-Ah-RV1" firstAttribute="top" secondItem="bo9-BI-7cK" secondAttribute="bottom" constant="42" id="v7a-QF-YHA"/>
                                     <constraint firstItem="QTA-2K-tgO" firstAttribute="top" secondItem="RP7-i5-SqD" secondAttribute="bottom" constant="10" id="wA7-6q-BLp"/>
                                 </constraints>
                             </view>
@@ -403,10 +383,9 @@
                         <outlet property="ScanUIContainerView" destination="jDD-EI-IPQ" id="dde-LI-oeI"/>
                         <outlet property="filterButton" destination="bo9-BI-7cK" id="0DJ-MQ-P3B"/>
                         <outlet property="leftDrawerButton" destination="WoV-XC-xK1" id="Jz7-QK-oYO"/>
-                        <outlet property="locationLabel" destination="3GP-IY-jjF" id="hZn-Tw-CHF"/>
                         <outlet property="progressView" destination="RP7-i5-SqD" id="zbk-An-oa4"/>
                         <outlet property="radarButton" destination="QTA-2K-tgO" id="fZZ-Fu-W7o"/>
-                        <outlet property="timeFilterControl" destination="eJn-Ah-RV1" id="gjN-J8-fpz"/>
+                        <outlet property="timeFilterControl" destination="sxZ-KT-aF5" id="wAK-zm-eyj"/>
                         <segue destination="YQi-AC-BdW" kind="modal" identifier="pushMapModalView" modalTransitionStyle="flipHorizontal" id="AGI-r8-OnT"/>
                     </connections>
                 </viewController>
